--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,13 +11,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v4
-        with:
-          go-version: 1.20
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Test
-        run: go test -v ./...
+      - uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
+      - run: go test -v ./...
 
   golangci-lint:
     runs-on: ubuntu-latest
@@ -25,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
 
@@ -37,7 +36,7 @@ jobs:
             fetch-depth: 0
         - uses: actions/setup-go@v4
           with:
-            go-version: 1.20
+            go-version: '1.20'
         - uses: goreleaser/goreleaser-action@v2
           with:
             args: check
